[package]
name = "zombie-core"
description = "Shared protocol types for the Zombie suite — cryptographic deletion receipts, hashing primitives, and serialisation for GDPR Right to Erasure on ICP"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Together-Alone-Ventures/zombie-core"

[dependencies]
sha2 = "0.10"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
candid = "0.10"

[dev-dependencies]
hex = "0.4"
